Fix z-index bug where nav over social

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -185,6 +185,7 @@ a {
   position: absolute;
   top: 16px;
   right: 16px;
+  z-index: 2;
 
   @media(max-width: 600px) {
     display: none;
